Updates for week 4

--- a/week-04/week-4-regression-task.ipynb
+++ b/week-04/week-4-regression-task.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "321192ca",
+   "metadata": {},
+   "source": [
+    "# Week 4 (not complete)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63295349-663d-4dcb-8b6f-e840806a6d27",
    "metadata": {},
    "source": [
