--- a/week-04/week-4-classification-task.ipynb
+++ b/week-04/week-4-classification-task.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "54678216",
+   "metadata": {},
+   "source": [
+    "# Week 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cbf53de4",
    "metadata": {},
    "source": [
